k8s/api/snip-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snip-api
  labels:
    app: snip-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snip-api
  template:
    metadata:
      labels:
        app: snip-api
    spec:
      imagePullSecrets:
      - name: regcred
      serviceAccountName: mysql-service
      containers:
      - name: snip-api-container
        image: k8sdemoregistory.azurecr.io/snip-api:v1
        ports:
        - containerPort: 8080
