k8s/api/api-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: snip-api
spec:
  selector: 
    app: snip-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
